<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompanyActivity"
    android:orientation="vertical"
    android:id="@+id/layout_company">

    <TextView
        android:id="@+id/company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_centerInParent="true"
        android:text="@string/company_name"
        android:textSize="30dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/siret"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/siret"/>

    <TextView
        android:id="@+id/created_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/created_date"/>

    <TextView
        android:id="@+id/company_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company_category"/>

    <TextView
        android:id="@+id/nature_juridique"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nature_juridique"/>

    <TextView
        android:id="@+id/geo_adresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/geo_adresse"/>

    <ProgressBar
        android:id="@+id/queryProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />



</LinearLayout>